Setup Web UI permissions for 'channel_admin'