@@ -40,9 +40,9 @@ import com.jcraft.jsch.JSchException;
 import org.apache.commons.collections.CollectionUtils;
 import org.quartz.JobExecutionContext;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 public class PaygUpdateAuthTask extends RhnJavaJob {
@@ -188,7 +188,7 @@ public class PaygUpdateAuthTask extends RhnJavaJob {
             NotificationMessage notificationMessage = UserNotificationFactory.createNotificationMessage(
                     new PaygAuthenticationUpdateFailed(instance.getHost(), instance.getId()));
             UserNotificationFactory.storeNotificationMessageFor(notificationMessage,
-                    Collections.singleton(RoleFactory.CHANNEL_ADMIN), Optional.empty());
+                    Set.of(RoleFactory.CHANNEL_ADMIN), Optional.empty());
             // was in error state before. At least second time failed to get the data
             // invalidate existing credentials
             paygDataProcessor.invalidateCredentials(instance);
